fixed z-index for date picker

--- a/src/styles/sidebar.css
+++ b/src/styles/sidebar.css
@@ -665,3 +665,7 @@ input[type="date"] {
   word-wrap: break-word;
   word-break: break-word;
 }
+
+.datepicker {
+  z-index: 3000 !important;
+}
